# ytqc

./: .gitignore  ARCHITECTURE.html  LICENSE  README.md  make_trending_dataset.py  pyproject.toml
installer/: bootstrap.ps1  bootstrap.sh
tests/: fakes.py  test_agent_chat.py  test_agent_loop.py  test_agent_schema.py  test_agent_tools.py  test_agent_ui.py  test_bridge_errors.py  test_channel_flow.py  test_chat_interrupt.py  test_config_and_state.py  test_extract_cache.py  test_governor.py  test_input_parse.py  test_judge.py  test_llm_client.py  test_llm_parsing.py  test_parallel_orchestrator.py  test_safety_gate.py  test_sampling.py  test_setup.py  test_setup_robustness.py  test_sinks_and_browser.py  test_validator.py  test_video_extract_overlap.py  test_video_flow.py
tests/fixtures/: yt_payloads.py
ytqc/: __init__.py  cli.py  config.py  input_parse.py  models.py  sampling.py  taxonomy.py
ytqc/agent/: __init__.py  chat.py  loop.py  schema.py  tools.py  ui.py
ytqc/agents/: channel_synthesizer.py  content_analyst.py  judge.py  safety_gate.py  validator.py  vidiq_insights.py  vision_analyst.py
ytqc/browser/: channel_page.py  extract_cache.py  frames.py  transcript.py  video_page.py  vidiq.py  webbridge.py  youtube_js.py
ytqc/harness/: accuracy.py
ytqc/llm/: cache.py  client.py  prompts.py
ytqc/pipeline/: channel_flow.py  governor.py  orchestrator.py  state.py  video_flow.py
ytqc/setup/: __init__.py  checks.py  chrome.py  deps.py  guide.py  kimi.py  ollama.py  platform.py  wizard.py
ytqc/sinks/: base.py  csv_sink.py  es_sink.py  excel_sink.py
(+1 files in other folders)
