[project]
name = "ytqc"
version = "0.1.0"
description = "Browser-driven agentic YouTube QC CLI — automates adtech channel/video categorization"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Silverpush" }]
requires-python = ">=3.10"
keywords = ["youtube", "qc", "brand-safety", "browser-automation", "llm", "agentic"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Nikhil010103/ytqc"
Repository = "https://github.com/Nikhil010103/ytqc"
Issues = "https://github.com/Nikhil010103/ytqc/issues"

[project.scripts]
ytqc = "ytqc.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ytqc*"]
exclude = ["tests*"]
